--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -7,17 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <Page.Resources>
-        <LinearGradientBrush x:Key="BrushOne" StartPoint="0.504,0.03" EndPoint="0.504,1.5">
-            <LinearGradientBrush.GradientStops>
-                <GradientStopCollection>
-                    <GradientStop Color="OrangeRed" Offset="0" />
-                    <GradientStop Color="Bisque" Offset="0.5" />
-                </GradientStopCollection>
-            </LinearGradientBrush.GradientStops>
-        </LinearGradientBrush>
-    </Page.Resources>
-    <Grid Background="{StaticResource BrushOne}">
+
         <!--<Grid.Background>
             <LinearGradientBrush EndPoint="0.504,1.5" StartPoint="0.504,0.03">
                 <GradientStop Color="#FFFFC934" Offset="0"/>
@@ -56,8 +46,9 @@
                 
             </Canvas>
         </Border>-->
+
+    <Grid Background="{StaticResource BrushOne}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
             <RowDefinition Height="1.5*"/>
             <RowDefinition Height="1.5*"/>
             <RowDefinition Height="1.5*"/>
@@ -68,5 +59,18 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
+        
+        <Image
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.RowSpan="3"
+            Source="/Assets/icon.png"/>
+
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="2"
+                    Grid.Column="1">
+            <Button
+                />
+        </StackPanel>
     </Grid>
 </Page>
