--- a/AudioPlayer/App.xaml
+++ b/AudioPlayer/App.xaml
@@ -7,7 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles/MainStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/MainStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
