--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -8,47 +8,6 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <!--<Grid.Background>
-            <LinearGradientBrush EndPoint="0.504,1.5" StartPoint="0.504,0.03">
-                <GradientStop Color="#FFFFC934" Offset="0"/>
-                <GradientStop Color="#FFFFFFFF" Offset="0.567"/>
-            </LinearGradientBrush>
-        </Grid.Background>-->
-    <!--<Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="18*"/>
-        </Grid.RowDefinitions>
-
-        <Grid 
-            Background="#E97C35"
-            Grid.Row="0">
-        </Grid>
-        <Border 
-            HorizontalAlignment="Stretch" 
-            VerticalAlignment="Stretch"
-            Background="White"
-            Grid.Row="1">
-            <Canvas >
-                <Image 
-                    x:Name="image"
-                    Source="./Assets/icon.png" 
-                    Width="123" 
-                    Height="130"/>
-                <TextBlock
-                    Text="Name"
-                    Foreground="Black"
-                    Canvas.Left="150"
-                    Canvas.Top ="20"
-                    FontSize="20" >
-                </TextBlock>
-            </Canvas>
-        </Border>-->
-    <!--<Page.Resources>
-        <UserControl.Resources>
-            <Image x:Key="MyImage" Source="Assets/button_play.png"/>
-        </UserControl.Resources>
-    </Page.Resources>-->
     <Grid Background="{StaticResource BrushOne}">
         <Grid.RowDefinitions>
             <RowDefinition Height="1.5*"/>
@@ -63,8 +22,30 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="0.5*" />
         </Grid.ColumnDefinitions>
 
+        <TextBlock
+            Grid.Row="1"
+            Grid.Column="1"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center"
+            Text="00:00"
+            FontSize="15"
+            Foreground="Black"/>
+        
+        <ProgressBar
+            Grid.Row="1"
+            Grid.Column="2"
+            Grid.ColumnSpan="3"
+            Foreground="Bisque"
+            Background="White"
+            BorderBrush="Black"
+            BorderThickness="1.5"
+            Value="70"
+            Height="33" >
+           
+        </ProgressBar>
         <Image
             Grid.Row="0"
             Grid.Column="0"
@@ -103,5 +84,6 @@
                 <ImageBrush ImageSource="Assets/button_right.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
+        
     </Grid>
 </Page>
