--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -13,8 +13,9 @@
             <RowDefinition Height="1.5*"/>
             <RowDefinition Height="1.5*"/>
             <RowDefinition Height="1.5*"/>
+            <RowDefinition Height="0.5*"/>
             <RowDefinition Height="12*"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
@@ -33,7 +34,7 @@
             Text="00:00"
             FontSize="15"
             Foreground="Black"/>
-        
+
         <ProgressBar
             Grid.Row="1"
             Grid.Column="2"
@@ -44,8 +45,9 @@
             BorderThickness="1.5"
             Value="70"
             Height="33" >
-           
+
         </ProgressBar>
+        
         <Image
             Grid.Row="0"
             Grid.Column="0"
@@ -60,6 +62,7 @@
                 <ImageBrush ImageSource="Assets/button_left.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
+        
         <Button Grid.Row="2" 
                 Grid.Column="2" 
                 HorizontalAlignment="Center" 
@@ -68,6 +71,7 @@
                 <ImageBrush ImageSource="Assets/button_play.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
+        
         <Button Grid.Row="2" 
                 Grid.Column="3" 
                 HorizontalAlignment="Center" 
@@ -76,6 +80,7 @@
                 <ImageBrush ImageSource="Assets/button_stop.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
+        
         <Button Grid.Row="2" 
                 Grid.Column="4" 
                 HorizontalAlignment="Center" 
@@ -84,6 +89,16 @@
                 <ImageBrush ImageSource="Assets/button_right.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
+        
+        <Border Grid.Row="3" 
+        BorderBrush="Black" 
+        BorderThickness="0,0,0,3" 
+        Grid.ColumnSpan="6" />
+        
+        <Border Grid.Row="5"
+        BorderBrush="Black"
+        BorderThickness="0,3,0,0"
+        Grid.ColumnSpan="6"/>
         
     </Grid>
 </Page>
