--- a/AudioPlayer/Styles/MainStyles.xaml
+++ b/AudioPlayer/Styles/MainStyles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AudioPlayer.Styles">
+    xmlns:local="using:AudioPlayer">
 
     <LinearGradientBrush x:Key="BrushOne" StartPoint="0.504,0.03" EndPoint="0.504,1.5">
         <LinearGradientBrush.GradientStops>
