--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -40,6 +40,13 @@
             <ColumnDefinition Width="0.5*" />
         </Grid.ColumnDefinitions>
 
+        <MediaElement 
+            Name="mediaElement"
+            Grid.Row="0"
+            Grid.Column="1"
+            Grid.ColumnSpan="5"
+            AutoPlay="True"/>
+        
         <TextBlock
             Grid.Row="1"
             Grid.Column="1"
