--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -44,9 +44,14 @@
             Name="mediaElement"
             Grid.Row="0"
             Grid.Column="1"
-            Grid.ColumnSpan="5"
             AutoPlay="True"/>
-        
+
+        <TextBlock
+            Name="mediaElementTextBlock"
+            Grid.Row="0"
+            Grid.Column="1"
+            Grid.ColumnSpan="5"
+            FontSize="20"/>
         <TextBlock
             Grid.Row="1"
             Grid.Column="1"
@@ -127,7 +132,7 @@
                             <ColumnDefinition Width="5*"/>
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
-                        
+
                         <TextBlock
                             Grid.Column="0"
                             FontSize="25"
@@ -139,7 +144,7 @@
                                 ImageSource="Assets/button_delete.png"/>
                             </Button.Background>
                         </Button>
-                        
+
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
