--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -61,18 +61,17 @@
             FontSize="15"
             Foreground="Black"/>
 
-        <ProgressBar
-            Grid.Row="1"
-            Grid.Column="2"
-            Grid.ColumnSpan="3"
+        <Slider
+            Name="sliderBar"
+            Grid.Row="2"
+            Grid.Column="0"
+            Margin="20,0,0,0"
+            BorderBrush="Transparent"
+            VerticalAlignment="Bottom"
+            Grid.ColumnSpan="5"
             Foreground="Bisque"
             Background="White"
-            BorderBrush="Black"
-            BorderThickness="1.5"
-            Value="70"
-            Height="33" >
-
-        </ProgressBar>
+            BorderThickness="0"/>
 
         <Image
             Grid.Row="0"
@@ -80,7 +79,7 @@
             Grid.RowSpan="3"
             Source="/Assets/cloud-icon.png"/>
 
-        <Button Grid.Row="2" 
+        <Button Grid.Row="1" 
                 Grid.Column="1">
             <Button.Background>
                 <ImageBrush ImageSource="Assets/button_left.png" Stretch="Uniform"/>
@@ -89,7 +88,7 @@
 
         <Button
                 Click="On_Button_Play_Click"
-                Grid.Row="2" 
+                Grid.Row="1" 
                 Grid.Column="2">
             <Button.Background>
                 <ImageBrush ImageSource="Assets/button_play.png" Stretch="Uniform"/>
@@ -97,14 +96,14 @@
         </Button>
 
         <Button 
-                Grid.Row="2"
+                Grid.Row="1"
                 Grid.Column="3">
             <Button.Background>
                 <ImageBrush ImageSource="Assets/button_stop.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
 
-        <Button Grid.Row="2" 
+        <Button Grid.Row="1" 
                 Grid.Column="4">
             <Button.Background>
                 <ImageBrush ImageSource="Assets/button_right.png" Stretch="Uniform"/>
