--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -23,12 +23,13 @@
             <Setter Property="BorderBrush" Value="Black"/>
         </Style>
     </Page.Resources>
+    
     <Grid Background="{StaticResource BrushOne}">
         <Grid.RowDefinitions>
             <RowDefinition Height="1.5*"/>
             <RowDefinition Height="1.5*"/>
-            <RowDefinition Height="1.5*"/>
-            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="0.1*"/>
             <RowDefinition Height="12*"/>
             <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
@@ -41,14 +42,21 @@
             <ColumnDefinition Width="0.6*" />
         </Grid.ColumnDefinitions>
 
-        <MediaElement 
+        <MediaElement
             x:Name="mPlayer"
             Source="{Binding CurrentSong.Path}"
-            Grid.Row="0"
-            Grid.Column="1"
-            AutoPlay="True"/>
+            Grid.Row="2"
+            AudioCategory="BackgroundCapableMedia"
+            Grid.Column="0"
+            Grid.ColumnSpan="6"
+            RealTimePlayback="True"
+            AreTransportControlsEnabled="True"
+            AutoPlay="True">
+            
+        </MediaElement>
 
-        <Slider 
+
+        <!--<Slider 
                 Grid.Row="2"
             Name="mySlider"
                 Grid.Column="0"
@@ -61,7 +69,7 @@
                 BorderThickness="0" 
                 HorizontalAlignment="Left" 
                 Grid.RowSpan="2" 
-                Width="339"/>
+                Width="339"/>-->
 
         <TextBlock
             Text="{Binding SongNameTextBlock}"
@@ -72,23 +80,11 @@
             HorizontalAlignment="Center"
             FontSize="20"/>
 
-        <TextBlock
-            Grid.Row="2"
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
-            VerticalAlignment="Center"
-            Margin="5,0,0,0"
-            HorizontalAlignment="Left"
-            Text="00:00"
-            FontSize="15"
-            Foreground="Black"/>
-
-
         <Image
             Grid.Row="0"
             Grid.Column="0"
-            Grid.RowSpan="3"
-            Source="/Assets/cloud-icon.png"/>
+            Grid.RowSpan="2"
+            Source="/Assets/cloud-icon.png" Stretch="UniformToFill"/>
 
         <Button 
                Grid.Row="1"
@@ -173,7 +169,7 @@
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
-        
+
         <Button 
                 Name="AddButton"
                 Command="{Binding Add}"
